--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "classnames": "^2.2.6",
     "emotion": "^10.0.17",
     "lodash": "^4.17.15",
+    "nanoid": "^3.1.3",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router": "^4.3.1",
