--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "nanoid": "^3.1.3",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-redux": "^7.2.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
     "styled-components": "^3.2.3"
   },
   "devDependencies": {
