--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@types/classnames": "^2.2.9",
     "@types/lodash": "^4.14.144",
     "@types/react-router-dom": "^5.1.0",
@@ -25,8 +28,10 @@
     "nanoid": "^3.1.3",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-redux": "^7.2.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
     "styled-components": "^3.2.3"
   },
   "devDependencies": {
