--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@types/classnames": "^2.2.9",
     "@types/lodash": "^4.14.144",
+    "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.0",
     "classnames": "^2.2.6",
     "emotion": "^10.0.17",
