--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "jsx": "react",
-    "target": "es6"
+    "target": "es6",
+    "noUnusedLocals": true
   },
   "exclude": [
     "node_modules"
