--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-redux": "^7.2.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^5.1.2",
+    "react-tooltip": "^4.2.5",
     "redux": "^4.0.5",
     "styled-components": "^3.2.3"
   },
